--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 section{
-    padding: 60px 0;
+    padding: 50px 0;
 }
 .container{
     width: 90%;
@@ -62,7 +62,7 @@ section{
 section.about{
     background-image: url(./images/shapes/7.png);
     padding: 0;
-    /* overflow: hidden; */
+    margin-bottom: 50px;
 }
 .about .about-img{
 }
@@ -101,18 +101,20 @@ section.about{
     line-height: 1.6;
 }
 .testimonial .team-description,
-.contact .contact-description{
+.contact .contact-description,
+.recipie .recipie-description{
     text-align: center;
 }
 .testimonial .team-description p,
 .contact .contact-description p{
     text-align: center;
     color: #fc8f49;
-    font-size: 18px;
+    font-size: 16px;
     margin: 10px auto 30px;
     font-weight: 700;
     display: inline-block;
-    /* border-bottom: 2px solid #fc8f49; */
+    border-bottom: 2px solid #fc8f49;
+    padding-bottom: 2px;
 }
 .recipie .recipie-item,
 .testimonial .team-member{
@@ -150,6 +152,7 @@ section.about{
 .subscribe-items{
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
     padding: 50px;
+    border-radius: 20px;
 }
 .subscribe-number{
     width: 33%;
